# line-viewer3

./: Cargo.toml  README.md  TODO.md  clippy.toml  justfile
assets/: application-x-lineview.xml  line-view.desktop
sample/: a.txtlv  b.txtlv  clean.txtlv  composite-ab.txtlv  env.txtlv  escape.txtlv  extra-lines.txtlv  handle.txtlv  ignore.txtlv  invalid.txtlv  lines.txtlv  with-title.txtlv
src/: cli.rs  ipc.rs  lib.rs  line_view.rs  main.rs  ui.rs
src/line_view/: cmd.rs  directive.rs  error.rs  import.rs  lib.rs  line_view.rs  path_ext.rs  provide.rs
src/line_view/line_view/: directive_reader.rs  directive_source.rs  line.rs  line_map.rs  source.rs  source_action.rs
